--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
                         Buyers protection possible!</p>
                 </div>
             </div>
-            <button class="btn-see-more">See More <i class="fa-solid fa-arrow-right"></i></button>
+            <div id="btn-see-more">
+                <button>See More <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
         </section>
         <!-- Popular Collection END from here  -->
         <section class="featured-products">
